[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/drache.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://sprites/dot.png" type="Texture" id=3]
[ext_resource path="res://sprites/arrow.png" type="Texture" id=4]
[ext_resource path="res://sprites/ruach1.png" type="Texture" id=5]
[ext_resource path="res://sprites/rauch3.png" type="Texture" id=6]
[ext_resource path="res://sprites/rauch2.png" type="Texture" id=7]
[ext_resource path="res://sounds/NFF-menu-03-a.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/NFF-zip.wav" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 37.5275

[sub_resource type="CircleShape2D" id=2]
radius = 29.3996

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "feuer",
"speed": 8.0
}, {
"frames": [  ],
"loop": false,
"name": "New Anim",
"speed": 5.0
} ]

[node name="player" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )

[node name="playerSprite" type="Sprite" parent="."]
scale = Vector2( 0.300073, 0.300073 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="BumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Feuer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="FeuerCollision" type="CollisionShape2D" parent="Feuer" groups=[
"Feuer",
]]
position = Vector2( 125.865, -0.00012207 )
shape = SubResource( 2 )

[node name="FeuerSprite" type="AnimatedSprite" parent="Feuer"]
position = Vector2( 1.41428, 0.00012207 )
frames = SubResource( 3 )
animation = "New Anim"
frame = -1
playing = true
offset = Vector2( 0, 15 )

[node name="DebugSprites" type="Node2D" parent="."]
visible = false

[node name="intentSprite" type="Sprite" parent="DebugSprites"]
scale = Vector2( 0.0127887, 0.0127887 )
texture = ExtResource( 3 )

[node name="accelerationSprite" type="Sprite" parent="DebugSprites"]
scale = Vector2( 0.045176, 0.045176 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( -512, -1524 )

[node name="dragSprite" type="Sprite" parent="DebugSprites"]
scale = Vector2( 0.045176, 0.045176 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( -512, -1524 )

[node name="liftSprite" type="Sprite" parent="DebugSprites"]
scale = Vector2( 0.045176, 0.045176 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( -512, -1524 )
[connection signal="body_entered" from="Feuer" to="." method="burned_something"]
